Back_End (Flask)/static/style.css
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  /* overflow: hidden; */
}
body {
  font-family: "Oxygen", sans-serif;
  background: linear-gradient(180deg, #ffffff 64.12%, #6ef0d4 164.45%) no-repeat;
  min-height: 100vh;
}
button {
  font-family: "Oxygen", sans-serif;
  font-weight: 700;
  font-size: 25px;
  background: transparent;
  border: none;
}

header {
  display: flex;
  margin: auto;
  margin-top: 1%;
  width: 70%;
  min-height: 10vh;
  align-items: center;
}
nav {
  background: rgba(110, 240, 212, 0.68);
  border-radius: 72px;
  flex: 1;
  height: auto;
}
.nav-buttons {
  list-style: none;
  display: flex;
  justify-content: space-evenly;
  padding: 0px 20px 0px 20px;
  margin: 1%;
}

.nav-button {
  color: #000000;
  font-size: 18px;
  text-decoration: none;
  transition: 1s ease;
  min-width: 100px;
  min-height: 30px;
}
.nav-button:hover {
  /* border: 4px solid #575771; */
  background: rgba(255, 255, 255, 0.46);
  border-radius: 26px;
  transition: 200ms ease;
  width: auto;
  min-width: 100px;
  min-height: 30px;
  height: auto;
}
.cover {
  display: flex;
  width: 90%;
  margin: auto;
  align-items: center;
  min-height: 80vh;
  flex-wrap: wrap;
  align-content: flex-start;
  justify-content: center;
}
.cover-text h1 {
  font-style: normal;
  font-weight: bold;
  font-size: 132px;
  line-height: 167px;
  letter-spacing: 0.11em;
  z-index: 3;
  color: #687cfc;
}
.cover-text p {
  font-size: 27px;
  line-height: 44px;
  padding-left: 8px;
  color: #5b6cdb;
}
.cover-text {
  flex: 2;
  z-index: 3;
}
.cover-img {
  flex: 3;
  /* height: auto;
  width: auto; */
  z-index: 1;
  width: auto;
  transition: 1s ease;
}
.cover-img img {
  max-width: 100%;
  height: auto;
}
.bottom-clipboard {
  width: 256px;
  height: 262px;
  bottom: 1%;
  position: absolute;
  left: 2%;
  z-index: 0;
}
.bottom-clipboard img {
  height: 100%;
  width: 100%;
  transform: rotate(-18.85deg);
}

/* Mobile CSS */
@media screen and (max-width: 1024px) {
  body {
    transition: 1s ease;
    overflow: hidden;
  }
  .cover {
    flex-direction: column;
    padding-top: 2%;
    justify-content: space-evenly;
    align-content: center;
  }
  .cover-text {
    flex: 1;
    text-align: center;
  }
  .cover-text p {
    font-size: 30px;
  }
  .cover-img img {
  }
  .bottom-clipboard {
    transform: scale(0);
  }
}

